--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Must_Do_002</string>
     <string name="sign_in">Sign in</string>
-    <string name="sign_in_username">Username / email</string>
+    <string name="sign_in_email">Email</string>
     <string name="password">Password</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_up_email">Email</string>
