--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="sign_up_email">Email</string>
     <string name="sign_up_username">Username</string>
     <string name="to_sign_up">Not registered yet? Sign up now.</string>
+    <string name="confirm_delete">Are you sure you want to delete this task?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
